# classic_computer_sci

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ch1/: CMakeLists.txt  Makefile  fib2.cc  fib3.cc  fib4.cc  fib5.cc  gene.cc  pi.cc  towers-of-hanoi.cc  unbreakable-encryption.cc
ch2/: CMakeLists.txt  Makefile  bfs.h  maze  maze.cc  maze2.cc  missionaries.cc
ch3/: 8-queens.cc  CMakeLists.txt  Makefile  common.h  csp.h  map-coloring.cc  send-more.cc  word-search.cc
ch4/: CMakeLists.txt  Makefile  graph.cc
ch5/: CMakeLists.txt  Makefile  genetic  genetic-algorithm.h  genetic_algorithm.h  main.cc  output.txt  send-more.cc  simple-equation.cc  simple_equation.cc  simple_equation.h
ch6/: point.h  stats.h
ch6/tests/: Makefile  stats.cc  tests.cc
